<resources>
    <string name="app_name">MadLevel6Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="question">The most popular movies of</string>
    <string name="year">year</string>
    <string name="submit">SUBMIT</string>
    <string name="movie">movie</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textview">TextView</string>
    <string name="summary">Summary</string>
    <string name="movie_release_date">Movie release date</string>
    <string name="movie_title">Movie title</string>
    <string name="todo">TODO</string>
</resources>